# klogcat

./: .gitignore  AGENTS.md  GOAL.md  README.md  RELEASE_NOTES.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.githooks/: pre-commit  pre-push
.github/workflows/: release-wiki-report.yml
.harness/agent-layout-audit/: layout-report.json  scroll-probes.json
.harness/monkey/: api-flow-monkey-report.json
.harness/playwright-scenario-audit/: report.json
docs/: DESIGN.md  DESIGN_REVIEW_FOR_IMPLEMENTATION.md  HARNESS_GATES.md  INDEX.md  INSTALL.md  LOG_VIEWER_EXTENSIONS.md  SMOKE_TEST.md  bug-audit-rubber-duck.md  plugin-platform-todo.md
docs/assets/: klogcat-demo.webm
e2e/: browserFallback.e2e.test.tsx  productQuality.e2e.test.tsx
public/: log-policy.json
scripts/: strict-push.sh
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  kubectl.rs  lib.rs  main.rs
src-tauri/src/commands/: kube.rs  logs.rs  mod.rs  settings.rs  vm.rs  vm_diagnostics.rs  vm_process.rs  vm_target_groups.rs  vm_tests.rs  vm_username.rs
src-tauri/src/process/: line_splitter.rs  log_process.rs  mod.rs
src-tauri/src/process/log_process/: mocked_process.rs  readers.rs  request_validation.rs  start_stream.rs  timestamp.rs
src-tauri/src/settings/: mod.rs  plugin_migration.rs  secrets.rs  settings_payload_tests.rs  settings_tests.rs  target_plugin_groups.rs  target_plugins.rs  validation.rs  vm_target_group_tests.rs
src/__tests__/: App.test.ts  (+53 more)
(+182 files in other folders)
