[package]
name = "klogcat"
version = "0.0.4"
description = "Kubernetes file-tail log viewer"
authors = ["klogcat"]
edition = "2021"

[lib]
name = "klogcat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

